# Mnemosyne

./: .gitignore  .mnemignore  .todo  AGENTS.md  Cargo.toml  README.md  SPEC.md  track_output.txt
.github/workflows/: build.yml
.mnemosyne/: tracked
.mnemosyne/db/: mnemosyne.db  mnemosyne.db-shm
crates/apps/mnem-cli/: Cargo.toml
crates/apps/mnem-cli/src/: cli.rs  config.rs  context.rs  cp.rs  daemon.rs  diff.rs  dispatcher.rs  gc.rs  git.rs  history.rs  main.rs  on.rs  open.rs  refs.rs  restore.rs  stats.rs  symbols.rs  timeline.rs  track.rs  utils.rs
crates/apps/mnem-cli/src/commands/: daemon.rs  files.rs  general.rs  maintenance.rs  mod.rs  tui.rs  workspace.rs
crates/apps/mnem-cli/src/commands/apps/: components.rs  mod.rs  tui.rs
crates/apps/mnem-cli/src/commands/daemon/: mcp.rs  mod.rs  start.rs  status.rs  stop.rs
crates/apps/mnem-cli/src/commands/files/: cat.rs  diff.rs  info.rs  log.rs  mod.rs  open.rs  restore.rs  search.rs  timeline.rs
crates/apps/mnem-cli/src/commands/general/: help.rs  mod.rs  version.rs
crates/apps/mnem-cli/src/commands/git/: commit_info.rs  commits.rs  git_event.rs  git_hook.rs  log_commits.rs  mod.rs
crates/apps/mnem-cli/src/commands/maintenance/: config.rs  gc.rs  mod.rs  setup_protocol.rs
crates/apps/mnem-cli/src/commands/workspace/: checkpoint.rs  checkpoint_info.rs  checkpoints.rs  forget.rs  history.rs  list.rs  mod.rs  project.rs  statistics.rs  watch.rs
crates/apps/mnem-cli/src/handlers/: history_new.rs  info.rs  mod.rs  off.rs  track.rs  uninstall.rs  update.rs
crates/apps/mnem-cli/src/handlers/daemon/: mcp.rs  mod.rs  status.rs
crates/apps/mnem-cli/src/handlers/files/: history.rs  info.rs  mod.rs  restore.rs  search.rs
crates/apps/mnem-cli/src/handlers/general/: git.rs  mod.rs
crates/apps/mnem-cli/src/handlers/maintenance/: config.rs  mod.rs  uninstall.rs  update.rs
crates/apps/mnem-cli/src/handlers/workspace/: mod.rs  track.rs
crates/apps/mnem-cli/src/i18n/: en.rs  it.rs  mod.rs
crates/apps/mnem-cli/src/os/: macos.rs  mod.rs  unix.rs  windows.rs
crates/apps/mnem-cli/src/theme/: builder.rs  mod.rs  palette.rs  theme.rs
crates/apps/mnem-cli/src/ui/: colors.rs  components.rs  highlight.rs  layout.rs  mod.rs
crates/apps/mnem-cli/src/ui_components/: elements.rs  list.rs  messages.rs  mod.rs  status.rs
crates/apps/mnem-daemon/: Cargo.toml
crates/apps/mnem-daemon/src/: lib.rs  main.rs  maintenance.rs  monitor.rs  power.rs  rpc_handler.rs  state.rs
crates/apps/mnem-daemon/src/os/: unix.rs  windows.rs
crates/apps/mnem-tui/: Cargo.toml
crates/apps/mnem-tui/src/: app.rs  events.rs  lib.rs  mod.rs  theme.rs  view.rs  view_new.rs
crates/apps/mnem-tui/src/components/: dialog.rs  header.rs  mod.rs  preview.rs  projects.rs  search.rs  settings.rs  shared.rs  sidebar.rs  stats.rs  status_bar.rs
crates/core/mnem-core/: Cargo.toml
crates/core/mnem-core/src/: client.rs  config.rs  env.rs  error.rs  ipc.rs  lib.rs  process.rs  protocol.rs
crates/core/mnem-core/src/models/: mod.rs  project.rs
crates/core/mnem-core/src/os/: mod.rs  unix.rs  windows.rs
crates/core/mnem-core/src/storage/: database.rs  fs.rs  mod.rs  registry.rs  repository.rs
crates/core/mnem-core/src/storage/tiered/: cold_layer.rs  config.rs  hot_layer.rs  manager.rs  mod.rs  warm_layer.rs
crates/core/mnem-core/src/utils/: auth.rs  validation.rs
crates/core/mnem-macros/: Cargo.toml
crates/core/mnem-macros/src/: lib.rs
crates/core/mnem-test/: Cargo.toml
crates/core/mnem-test/src/: lib.rs
crates/core/mnem-test/tests/: dedup.rs  monitor_integration.rs  repository_lifecycle.rs  stress.rs
crates/extensions/mnem-lsp/: Cargo.toml  README.md
crates/extensions/mnem-lsp/examples/: zed-settings.json
crates/extensions/mnem-lsp/scripts/: install.ps1  install.sh
crates/extensions/mnem-lsp/src/: main.rs  main.rs.backup
crates/extensions/mnem-mcp/: Cargo.toml
crates/extensions/mnem-mcp/src/: main.rs
crates/extensions/mnem-zed/: Cargo.toml  README.md  extension.toml  extension.wasm
crates/extensions/mnem-zed/src/: lib.rs
crates/extensions/zed-mcp/: Cargo.toml  extension.toml  extension.wasm
crates/extensions/zed-mcp/src/: lib.rs
docs/: MNP_STANDARDIZATION.md  PERFORMANCE_ARCHITECTURE.md  PROTOCOL.md  SEMANTIC_DELTAS.md
scripts/: Build-Binaries.ps1  build.ps1  build.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
