[workspace]
members = [
    "crates/core/mnem-core",
    "crates/core/mnem-test",
    "crates/core/mnem-macros",
    "crates/apps/mnem-daemon",
    "crates/apps/mnem-tui",
    "crates/apps/mnem-cli",
    "crates/extensions/mnem-mcp",
    "crates/extensions/mnem-zed",
    "crates/extensions/zed-mcp",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
semantic-delta-protocol = { git = "https://github.com/alessandrobrunoh/Semantic-Delta-Protocol.git" }
mnem-core = { path = "crates/core/mnem-core" }
mnem-cli = { path = "crates/apps/mnem-cli" }

# Shared external dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
blake3 = "1.5"
zstd = "0.13"
redb = "2.1"
bincode = "1.3"
ignore = "0.4"
libc = "0.2"
dirs = "5.0"
toml = "0.8"
notify = "6.1"
tempfile = "3.10"
fastcdc = "3.1"
streaming-iterator = "0.1"
tree-sitter = "0.24"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-md = "0.3"
bytes = "1.6"
flexi_logger = "0.29"
tree-sitter-highlight = "0.24"
lru = "0.13"
serde_yaml = "0.9"
memmap2 = "0.9"
lasso = { version = "0.7", features = ["multi-threaded"] }
uuid = { version = "1.8", features = ["v4"] }
dashmap = "6.0"
parking_lot = "0.12"
content_inspector = "0.2"
similar = "2.5"
syntect = "5.3"
ratatui = "0.26"
crossterm = "0.27"
windows-sys = "0.52"
reqwest = { version = "0.12", features = ["json", "blocking"] }
mnem-tui = { path = "crates/apps/mnem-tui" }
mnem-daemon = { path = "crates/apps/mnem-daemon" }
mnem-macros = { path = "crates/core/mnem-macros" }
mnem-test = { path = "crates/core/mnem-test" }
