[package]
name = "mnem-cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "mnem"
path = "src/main.rs"

[dependencies]
mnem-core.workspace = true
mnem-tui.workspace = true
mnem-daemon.workspace = true
mnem-macros.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
syntect.workspace = true
similar.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
windows-sys.workspace = true
tree-sitter-highlight = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-ruby = { workspace = true }
notify = "6.1"
clap = { version = "4.0", features = ["derive"] }
reqwest.workspace = true
