[package]
name = "mnem-core"
version = "0.1.0"
edition = "2024"

[dependencies]
semantic-delta-protocol.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
blake3.workspace = true

chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
dirs.workspace = true
toml.workspace = true
tempfile.workspace = true
 rayon.workspace = true
similar.workspace = true
streaming-iterator.workspace = true
fastcdc.workspace = true
uuid.workspace = true
bytes.workspace = true
lasso.workspace = true
memmap2.workspace = true


tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-java.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-php.workspace = true
tree-sitter-json.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-md.workspace = true
libc = "0.2"
windows-sys.workspace = true
