[package]
name = "mnem-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mnem-lsp"
path = "src/main.rs"

[dependencies]
mnem-core.workspace = true
tower-lsp = "0.20"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
flexi_logger.workspace = true
dirs.workspace = true
async-trait = "0.1"
