[package]
name = "mnem-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
mnem-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait = "0.1"
futures = "0.3"
chrono.workspace = true
tower = { version = "0.4", features = ["full"] }
