[package]
name = "mnem-zed"
version = "0.1.0"
edition = "2024"
authors = ["Mnemosyne Team <team@mnemosyne.dev>"]
description = "Zed extension for Mnemosyne local history"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
