[package]
name = "zed-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Mnemosyne Team <team@mnemosyne.dev>"]
description = "Zed extension for Mnemosyne MCP server"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
